--- a/report/index-sort-f.html
+++ b/report/index-sort-f.html
@@ -31,18 +31,18 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">286</td>
-            <td class="headerCovTableEntry">434</td>
-            <td class="headerCovTableEntryLo">65.9 %</td>
+            <td class="headerCovTableEntry">289</td>
+            <td class="headerCovTableEntry">456</td>
+            <td class="headerCovTableEntryLo">63.4 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-18 13:25:21</td>
+            <td class="headerValue">2023-05-23 16:26:58</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">72</td>
-            <td class="headerCovTableEntry">99</td>
-            <td class="headerCovTableEntryLo">72.7 %</td>
+            <td class="headerCovTableEntry">73</td>
+            <td class="headerCovTableEntry">102</td>
+            <td class="headerCovTableEntryLo">71.6 %</td>
           </tr>
           <tr>
             <td></td>
@@ -50,8 +50,8 @@
             <td></td>
             <td class="headerItem">Branches:</td>
             <td class="headerCovTableEntry">111</td>
-            <td class="headerCovTableEntry">182</td>
-            <td class="headerCovTableEntryLo">61.0 %</td>
+            <td class="headerCovTableEntry">188</td>
+            <td class="headerCovTableEntryLo">59.0 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -92,6 +92,18 @@
       <td class="coverNumLo">0 / 1</td>
       <td class="coverPerLo">0.0&nbsp;%</td>
       <td class="coverNumLo">0 / 2</td>
+    </tr>
+    <tr>
+      <td class="coverFile"><a href="script/index.html">script</a></td>
+      <td class="coverBar" align="center">
+                <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="snow.png" width=100 height=10 alt="0.0%"></td></tr></table>
+      </td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 16</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 2</td>
+      <td class="coverPerLo">0.0&nbsp;%</td>
+      <td class="coverNumLo">0 / 4</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="test/legacy-test/index.html">test/legacy-test</a></td>
@@ -144,14 +156,14 @@
     <tr>
       <td class="coverFile"><a href="test/index.html">test</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=63 height=10 alt="63.2%"><img src="snow.png" width=37 height=10 alt="63.2%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=60 height=10 alt="60.0%"><img src="snow.png" width=40 height=10 alt="60.0%"></td></tr></table>
       </td>
-      <td class="coverPerLo">63.2&nbsp;%</td>
-      <td class="coverNumLo">12 / 19</td>
-      <td class="coverPerLo">57.1&nbsp;%</td>
-      <td class="coverNumLo">4 / 7</td>
-      <td class="coverPerLo">33.3&nbsp;%</td>
-      <td class="coverNumLo">2 / 6</td>
+      <td class="coverPerLo">60.0&nbsp;%</td>
+      <td class="coverNumLo">15 / 25</td>
+      <td class="coverPerLo">62.5&nbsp;%</td>
+      <td class="coverNumLo">5 / 8</td>
+      <td class="coverPerLo">25.0&nbsp;%</td>
+      <td class="coverNumLo">2 / 8</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="contracts/searcher-direct/index.html">contracts/searcher-direct</a></td>
