--- a/report/test/PFL_AuctionHandler.t.sol.func.html
+++ b/report/test/PFL_AuctionHandler.t.sol.func.html
@@ -31,18 +31,18 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">12</td>
-            <td class="headerCovTableEntry">19</td>
-            <td class="headerCovTableEntryLo">63.2 %</td>
+            <td class="headerCovTableEntry">15</td>
+            <td class="headerCovTableEntry">25</td>
+            <td class="headerCovTableEntryLo">60.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-18 13:25:21</td>
+            <td class="headerValue">2023-05-23 16:26:58</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">4</td>
-            <td class="headerCovTableEntry">7</td>
-            <td class="headerCovTableEntryLo">57.1 %</td>
+            <td class="headerCovTableEntry">5</td>
+            <td class="headerCovTableEntry">8</td>
+            <td class="headerCovTableEntryLo">62.5 %</td>
           </tr>
           <tr>
             <td></td>
@@ -50,8 +50,8 @@
             <td></td>
             <td class="headerItem">Branches:</td>
             <td class="headerCovTableEntry">2</td>
-            <td class="headerCovTableEntry">6</td>
-            <td class="headerCovTableEntryLo">33.3 %</td>
+            <td class="headerCovTableEntry">8</td>
+            <td class="headerCovTableEntryLo">25.0 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,31 +69,35 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><a href="PFL_AuctionHandler.t.sol.func-sort-c.html"><img src="../updown.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></a></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#461">BrokenSearcherForgotFastLaneCallFn.</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#476">BrokenSearcherForgotFastLaneCallFn.</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#465">BrokenSearcherForgotReturnBoolBytes.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#480">BrokenSearcherForgotReturnBoolBytes.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#476">BrokenSearcherRepayer.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#491">BrokenSearcherRepayer.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#487">BrokenSearcherRepayerPartial.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#502">BrokenSearcherRepayerPartial.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#454">BrokenUniswap.sickTrade</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#469">BrokenUniswap.sickTrade</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#507">SearcherRepayerEcho.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#522">SearcherRepayerEcho.fastLaneCall</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#526">SearcherRepayerOverpayerDouble.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#542">SearcherRepayerEvilEcho.fastLaneCall</a></td>
+              <td class="coverFnHi">1</td>
+            </tr>
+    <tr>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#566">SearcherRepayerOverpayerDouble.fastLaneCall</a></td>
               <td class="coverFnLo">0</td>
             </tr>
   </table>
