--- a/report/contracts/auction-handler/FastLaneAuctionHandler.sol.gcov.html
+++ b/report/contracts/auction-handler/FastLaneAuctionHandler.sol.gcov.html
@@ -37,7 +37,7 @@
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-23 16:26:58</td>
+            <td class="headerValue">2023-05-23 19:54:56</td>
             <td></td>
             <td class="headerItem">Functions:</td>
             <td class="headerCovTableEntry">18</td>
@@ -49,9 +49,9 @@
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">30</td>
+            <td class="headerCovTableEntry">32</td>
             <td class="headerCovTableEntry">40</td>
-            <td class="headerCovTableEntryMed">75.0 %</td>
+            <td class="headerCovTableEntryMed">80.0 %</td>
           </tr>
           <tr><td><img src="../../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -178,14 +178,14 @@
 <a name="107"><span class="lineNum">     107 </span>                :            : </a>
 <a name="108"><span class="lineNum">     108 </span>                :            :     /// @notice Pays the validator for fees / revenue sharing that is collected outside of submitFlashBid function</a>
 <a name="109"><span class="lineNum">     109 </span>                :            :     function payValidatorFee(address _payor) external payable nonReentrant {</a>
-<a name="110"><span class="lineNum">     110 </span>                :<span class="lineCov">          9 :         _payValidatorFee(_payor);</span></a>
+<a name="110"><span class="lineNum">     110 </span>                :<span class="lineCov">         11 :         _payValidatorFee(_payor);</span></a>
 <a name="111"><span class="lineNum">     111 </span>                :            :     }</a>
 <a name="112"><span class="lineNum">     112 </span>                :            : </a>
 <a name="113"><span class="lineNum">     113 </span>                :            :     function _payValidatorFee(address _payor) internal {</a>
-<a name="114"><span class="lineNum">     114 </span>        [<span class="branchCov" title="Branch 0 was taken 1 time"> + </span><span class="branchCov" title="Branch 1 was taken 8 times"> + </span>]:<span class="lineCov">          9 :         require(msg.value &gt; 0, &quot;msg.value = 0&quot;);</span></a>
-<a name="115"><span class="lineNum">     115 </span>                :<span class="lineCov">          8 :         validatorsBalanceMap[block.coinbase] += msg.value;</span></a>
-<a name="116"><span class="lineNum">     116 </span>                :<span class="lineCov">          8 :         validatorsTotal += msg.value;</span></a>
-<a name="117"><span class="lineNum">     117 </span>                :<span class="lineCov">          8 :         emit RelayFeeCollected(_payor, block.coinbase, msg.value);</span></a>
+<a name="114"><span class="lineNum">     114 </span>        [<span class="branchCov" title="Branch 0 was taken 1 time"> + </span><span class="branchCov" title="Branch 1 was taken 10 times"> + </span>]:<span class="lineCov">         11 :         require(msg.value &gt; 0, &quot;msg.value = 0&quot;);</span></a>
+<a name="115"><span class="lineNum">     115 </span>                :<span class="lineCov">         10 :         validatorsBalanceMap[block.coinbase] += msg.value;</span></a>
+<a name="116"><span class="lineNum">     116 </span>                :<span class="lineCov">         10 :         validatorsTotal += msg.value;</span></a>
+<a name="117"><span class="lineNum">     117 </span>                :<span class="lineCov">         10 :         emit RelayFeeCollected(_payor, block.coinbase, msg.value);</span></a>
 <a name="118"><span class="lineNum">     118 </span>                :            :     }</a>
 <a name="119"><span class="lineNum">     119 </span>                :            : </a>
 <a name="120"><span class="lineNum">     120 </span>                :            :     /// @notice Submits a SIMULATED flash bid. THE HTTP RELAY won't accept calls for this function.</a>
@@ -321,8 +321,8 @@
 <a name="250"><span class="lineNum">     250 </span>                :            :     /// @dev Callable by either validator address, their payee address (if not changed recently), or PFL.</a>
 <a name="251"><span class="lineNum">     251 </span>                :            :     function updateValidatorPayee(address _payee) external validPayee nonReentrant {</a>
 <a name="252"><span class="lineNum">     252 </span>                :            :         // NOTE: Payee cannot be updated until there is a valid balance in the fee vault</a>
-<a name="253"><span class="lineNum">     253 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 7 times"> + </span>]:<span class="lineCov">          7 :         if (_payee == address(0)) revert RelayCannotBeZero();</span></a>
-<a name="254"><span class="lineNum">     254 </span>        [<span class="branchNoExec" title="Branch 0 was not executed"> # </span><span class="branchCov" title="Branch 1 was taken 7 times"> + </span>]:<span class="lineCov">          7 :         if (_payee == address(this)) revert RelayCannotBeSelf();</span></a>
+<a name="253"><span class="lineNum">     253 </span>        [<span class="branchCov" title="Branch 0 was taken 1 time"> + </span><span class="branchCov" title="Branch 1 was taken 8 times"> + </span>]:<span class="lineCov">          9 :         if (_payee == address(0)) revert RelayCannotBeZero();</span></a>
+<a name="254"><span class="lineNum">     254 </span>        [<span class="branchCov" title="Branch 0 was taken 1 time"> + </span><span class="branchCov" title="Branch 1 was taken 7 times"> + </span>]:<span class="lineCov">          8 :         if (_payee == address(this)) revert RelayCannotBeSelf();</span></a>
 <a name="255"><span class="lineNum">     255 </span>                :            :         </a>
 <a name="256"><span class="lineNum">     256 </span>                :<span class="lineCov">          7 :         address _validator = getValidator();</span></a>
 <a name="257"><span class="lineNum">     257 </span>                :            : </a>
