--- a/report/index.html
+++ b/report/index.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">290</td>
+            <td class="headerCovTableEntry">297</td>
             <td class="headerCovTableEntry">457</td>
-            <td class="headerCovTableEntryLo">63.5 %</td>
+            <td class="headerCovTableEntryLo">65.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-23 20:50:28</td>
+            <td class="headerValue">2023-05-23 21:06:08</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">73</td>
+            <td class="headerCovTableEntry">74</td>
             <td class="headerCovTableEntry">102</td>
-            <td class="headerCovTableEntryLo">71.6 %</td>
+            <td class="headerCovTableEntryLo">72.5 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">114</td>
+            <td class="headerCovTableEntry">116</td>
             <td class="headerCovTableEntry">188</td>
-            <td class="headerCovTableEntryLo">60.6 %</td>
+            <td class="headerCovTableEntryLo">61.7 %</td>
           </tr>
           <tr><td><img src="glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -96,14 +96,14 @@
     <tr>
       <td class="coverFile"><a href="contracts/auction-handler/index.html">contracts/auction-handler</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=96 height=10 alt="96.1%"><img src="snow.png" width=4 height=10 alt="96.1%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="emerald.png" width=97 height=10 alt="97.4%"><img src="snow.png" width=3 height=10 alt="97.4%"></td></tr></table>
       </td>
-      <td class="coverPerHi">96.1&nbsp;%</td>
-      <td class="coverNumHi">74 / 77</td>
+      <td class="coverPerHi">97.4&nbsp;%</td>
+      <td class="coverNumHi">75 / 77</td>
       <td class="coverPerHi">94.7&nbsp;%</td>
       <td class="coverNumHi">18 / 19</td>
-      <td class="coverPerMed">82.5&nbsp;%</td>
-      <td class="coverNumMed">33 / 40</td>
+      <td class="coverPerMed">85.0&nbsp;%</td>
+      <td class="coverNumMed">34 / 40</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="contracts/helpers/index.html">contracts/helpers</a></td>
@@ -180,14 +180,14 @@
     <tr>
       <td class="coverFile"><a href="test/index.html">test</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="ruby.png" width=60 height=10 alt="60.0%"><img src="snow.png" width=40 height=10 alt="60.0%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="amber.png" width=84 height=10 alt="84.0%"><img src="snow.png" width=16 height=10 alt="84.0%"></td></tr></table>
       </td>
-      <td class="coverPerLo">60.0&nbsp;%</td>
-      <td class="coverNumLo">15 / 25</td>
-      <td class="coverPerLo">62.5&nbsp;%</td>
-      <td class="coverNumLo">5 / 8</td>
-      <td class="coverPerLo">25.0&nbsp;%</td>
-      <td class="coverNumLo">2 / 8</td>
+      <td class="coverPerMed">84.0&nbsp;%</td>
+      <td class="coverNumMed">21 / 25</td>
+      <td class="coverPerMed">75.0&nbsp;%</td>
+      <td class="coverNumMed">6 / 8</td>
+      <td class="coverPerLo">37.5&nbsp;%</td>
+      <td class="coverNumLo">3 / 8</td>
     </tr>
     <tr>
       <td class="coverFile"><a href="test/legacy-test/index.html">test/legacy-test</a></td>
