--- a/report/test/PFL_AuctionHandler.t.sol.func.html
+++ b/report/test/PFL_AuctionHandler.t.sol.func.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">15</td>
+            <td class="headerCovTableEntry">21</td>
             <td class="headerCovTableEntry">25</td>
-            <td class="headerCovTableEntryLo">60.0 %</td>
+            <td class="headerCovTableEntryMed">84.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-23 20:50:28</td>
+            <td class="headerValue">2023-05-23 21:06:08</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">5</td>
+            <td class="headerCovTableEntry">6</td>
             <td class="headerCovTableEntry">8</td>
-            <td class="headerCovTableEntryLo">62.5 %</td>
+            <td class="headerCovTableEntryMed">75.0 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">2</td>
+            <td class="headerCovTableEntry">3</td>
             <td class="headerCovTableEntry">8</td>
-            <td class="headerCovTableEntryLo">25.0 %</td>
+            <td class="headerCovTableEntryLo">37.5 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -69,36 +69,36 @@
       <td width="20%" class="tableHead">Hit count <span class="tableHeadSort"><a href="PFL_AuctionHandler.t.sol.func-sort-c.html"><img src="../updown.png" width=10 height=14 alt="Sort by hit count" title="Sort by hit count" border=0></a></span></td>
     </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#523">BrokenSearcherForgotFastLaneCallFn.</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#533">BrokenSearcherForgotFastLaneCallFn.</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#527">BrokenSearcherForgotReturnBoolBytes.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#537">BrokenSearcherForgotReturnBoolBytes.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#538">BrokenSearcherRepayer.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#548">BrokenSearcherRepayer.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#549">BrokenSearcherRepayerPartial.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#559">BrokenSearcherRepayerPartial.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#516">BrokenUniswap.sickTrade</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#526">BrokenUniswap.sickTrade</a></td>
               <td class="coverFnLo">0</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#569">SearcherRepayerEcho.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#579">SearcherRepayerEcho.fastLaneCall</a></td>
               <td class="coverFnHi">2</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#589">SearcherRepayerEvilEcho.fastLaneCall</a></td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#599">SearcherRepayerEvilEcho.fastLaneCall</a></td>
               <td class="coverFnHi">1</td>
             </tr>
     <tr>
-              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#613">SearcherRepayerOverpayerDouble.fastLaneCall</a></td>
-              <td class="coverFnLo">0</td>
+              <td class="coverFn"><a href="PFL_AuctionHandler.t.sol.gcov.html#619">SearcherRepayerOverpayerDouble.fastLaneCall</a></td>
+              <td class="coverFnHi">1</td>
             </tr>
   </table>
   <br>
