--- a/report/test/index-sort-b.html
+++ b/report/test/index-sort-b.html
@@ -31,27 +31,27 @@
             <td class="headerValue">lcov.info</td>
             <td></td>
             <td class="headerItem">Lines:</td>
-            <td class="headerCovTableEntry">15</td>
+            <td class="headerCovTableEntry">21</td>
             <td class="headerCovTableEntry">25</td>
-            <td class="headerCovTableEntryLo">60.0 %</td>
+            <td class="headerCovTableEntryMed">84.0 %</td>
           </tr>
           <tr>
             <td class="headerItem">Date:</td>
-            <td class="headerValue">2023-05-23 20:50:28</td>
+            <td class="headerValue">2023-05-23 21:06:08</td>
             <td></td>
             <td class="headerItem">Functions:</td>
-            <td class="headerCovTableEntry">5</td>
+            <td class="headerCovTableEntry">6</td>
             <td class="headerCovTableEntry">8</td>
-            <td class="headerCovTableEntryLo">62.5 %</td>
+            <td class="headerCovTableEntryMed">75.0 %</td>
           </tr>
           <tr>
             <td></td>
             <td></td>
             <td></td>
             <td class="headerItem">Branches:</td>
-            <td class="headerCovTableEntry">2</td>
+            <td class="headerCovTableEntry">3</td>
             <td class="headerCovTableEntry">8</td>
-            <td class="headerCovTableEntryLo">25.0 %</td>
+            <td class="headerCovTableEntryLo">37.5 %</td>
           </tr>
           <tr><td><img src="../glass.png" width=3 height=3 alt=""></td></tr>
         </table>
@@ -84,14 +84,14 @@
     <tr>
       <td class="coverFile"><a href="PFL_AuctionHandler.t.sol.gcov.html">PFL_AuctionHandler.t.sol</a></td>
       <td class="coverBar" align="center">
-        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../ruby.png" width=60 height=10 alt="60.0%"><img src="../snow.png" width=40 height=10 alt="60.0%"></td></tr></table>
+        <table border=0 cellspacing=0 cellpadding=1><tr><td class="coverBarOutline"><img src="../amber.png" width=84 height=10 alt="84.0%"><img src="../snow.png" width=16 height=10 alt="84.0%"></td></tr></table>
       </td>
-      <td class="coverPerLo">60.0&nbsp;%</td>
-      <td class="coverNumLo">15 / 25</td>
-      <td class="coverPerLo">62.5&nbsp;%</td>
-      <td class="coverNumLo">5 / 8</td>
-      <td class="coverPerLo">25.0&nbsp;%</td>
-      <td class="coverNumLo">2 / 8</td>
+      <td class="coverPerMed">84.0&nbsp;%</td>
+      <td class="coverNumMed">21 / 25</td>
+      <td class="coverPerMed">75.0&nbsp;%</td>
+      <td class="coverNumMed">6 / 8</td>
+      <td class="coverPerLo">37.5&nbsp;%</td>
+      <td class="coverNumLo">3 / 8</td>
     </tr>
   </table>
   </center>
